--- a/web/activities/add/add_activity.html
+++ b/web/activities/add/add_activity.html
@@ -105,9 +105,10 @@
       <div class="form-group">
         <label for="type" class="col-sm-2 control-label">Type</label>
         <div class="col-sm-10">
-          <select ng-model="add.entity.activity.catagory">
+          <select ng-model="add.entity.activity.catagory" class="form-control">
             <option value="homework"> Homework </option>
             <option value="study"> Study </option>
+            <option value="question"> Assessment  Question </option>
           </select>
         </div>
       </div>
