--- a/web/admin/admin.html
+++ b/web/admin/admin.html
@@ -13,7 +13,7 @@
 
   <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img alt="Mange Activities" class="admin-images">
+      <img alt="Mange Activities" data-ng-src="{{ctrl.activityImage}}" style="height:250px">
         <div class="caption">
           <h3> Activities </h3>
           <p> Activities are... The can be grouped together and presented as Homework, Study tools or even quizes/tests.  </p>
