--- a/web/children/assessments/new/new_assessment.html
+++ b/web/children/assessments/new/new_assessment.html
@@ -5,6 +5,7 @@
   <div class="alert alert-danger" role="alert" ng-if="newAssessment.error"> {{newAssessment.error}} </div>
   <div class="jumbotron"> 
     <h1> {{newAssessment.items.question.text}} </h1> 
+    <div question-picture pic="newAssessment.items.picture" width="50%"> </div>
   </div> 
   <rating style="font-size:2em; color: gold;" ng-model="newAssessment.rateQuestion" max="newAssessment.max" readonly="newAssessment.isReadonly" on-hover="newAssessment.hoveringOver(value)" on-leave="newAssessment.overStar = null"></rating>
 </div>
