--- a/web/questions/details/detail_question.html
+++ b/web/questions/details/detail_question.html
@@ -19,7 +19,7 @@
         </td>
         <td> {{::resource.question.text}} </td>
         <td> {{::resource.question.answer}} </td>
-        <td ng-hide="hidePicture" question-picture pic="resource.picture" style="width: 100px;height:100px"> </td>
+        <td ng-hide="hidePicture" question-picture pic="resource.picture" width="50%"> </td>
       </tr>
     </tbody> 
   </table> 
